fixed spacing

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ a{
 }
 
 #container{
-	max-width:1200px;
+	max-width:1000px;
 	width:100%;
 	margin-left:auto;
 	margin-right:auto;
